relations UI changes

--- a/platform-ui/views/includes/commonTemplates.ejs
+++ b/platform-ui/views/includes/commonTemplates.ejs
@@ -222,7 +222,7 @@
                             <div class="il-rt-notn">
                                 <ul ng-if="list.length == 0">
                                     <li>
-                                        <span style="">Objects not found</span>
+                                        <span style="">None</span>
                                     </li>
                                 </ul>
                                 <ul class="nav" ng-show="list.length > 0">
