--- a/platform-ui/views/includes/header-scripts.ejs
+++ b/platform-ui/views/includes/header-scripts.ejs
@@ -2,8 +2,8 @@
   	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
-<script src="/js/thirdparty/jquery.min.js"></script>
-<script src="/js/thirdparty/bootstrap.min.js"></script>
-<script src="/js/thirdparty/angular.min.js"></script>
-<script src="/js/thirdparty/angular-route.min.js"></script>
-<script src="/js/thirdparty/angular-ui-router.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/jquery.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/bootstrap.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/angular.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/angular-route.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/angular-ui-router.min.js"></script>
