--- a/platform-ui/views/includes/player-scripts.ejs
+++ b/platform-ui/views/includes/player-scripts.ejs
@@ -1,25 +1,25 @@
-<script src="/js/thirdparty/wysihtml5-0.3.0.js"></script>
-<script src="/js/thirdparty/wysihtml5x-toolbar.min.js"></script>
-<script src="/js/thirdparty/bootstrap3-wysihtml5.js"></script>
-<script src="/js/thirdparty/angular-d3-min.js"></script>
-<script src="/js/thirdparty/d3.min.js"></script>
-<script src="/js/thirdparty/sunburst-services.js"></script>
-<script src="/js/thirdparty/sunburst-directives.js"></script>
-<script src="/js/thirdparty/sunburst.js"></script>
-<script src="/js/thirdparty/angular-sanitize.min.js"></script>
-<script src="/js/thirdparty/angular-readable-time.min.js"></script>
-<script src="/js/thirdparty/truncate.js"></script>
-<script src="/js/app/custom.js" type="text/javascript"></script>
-<script src="/js/app/dndTree.js" type="text/javascript"></script>
-<script src="/js/thirdparty/underscore.js"></script>
-<script src="/js/thirdparty/string.min.js"></script>
-<script src="/js/thirdparty/jquery.bxslider.min.js"></script>
-<script src="/js/thirdparty/moment.js"></script>
-<script src="/js/thirdparty/livestamp.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/wysihtml5-0.3.0.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/wysihtml5x-toolbar.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/bootstrap3-wysihtml5.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/angular-d3-min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/d3.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/sunburst-services.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/sunburst-directives.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/sunburst.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/angular-sanitize.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/angular-readable-time.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/truncate.js"></script>
+<script src="<%=contextPath%>/js/app/custom.js" type="text/javascript"></script>
+<script src="<%=contextPath%>/js/app/dndTree.js" type="text/javascript"></script>
+<script src="<%=contextPath%>/js/thirdparty/underscore.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/string.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/jquery.bxslider.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/moment.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/livestamp.min.js"></script>
 
-<script src="/js/app/controllers/mainController.js"></script>
-<script src="/js/app/controllers/loginController.js"></script>
-<script src="/js/app/controllers/gameVisualizationController.js"></script>
+<script src="<%=contextPath%>/js/app/controllers/mainController.js"></script>
+<script src="<%=contextPath%>/js/app/controllers/loginController.js"></script>
+<script src="<%=contextPath%>/js/app/controllers/gameVisualizationController.js"></script>
 
 <script type="text/javascript">
     $(function(){
