--- a/platform-ui/views/player/player.ejs
+++ b/platform-ui/views/player/player.ejs
@@ -19,7 +19,7 @@
     <section class="mid-container-full">
         <div id="conformMessage" class="alert  hide" ></div>
         <div class="text-center" ng-show="loadingPlayer" style="margin-top: 50px">
-            Loading <img src="/img/loading.gif"/>
+            Loading <img src="<%=contextPath%>/img/loading.gif"/>
         </div>
         <div class="mid-container" ng-show="!loadingPlayer">
             <div class="col-sm-1 NavContentz leftbarshadow" style="position: fixed; top: 65px;">
