--- a/platform-ui/views/web/LearningObjects.ejs
+++ b/platform-ui/views/web/LearningObjects.ejs
@@ -39,7 +39,7 @@
                 <div class="il-web-padng">
                     <div class="row container il_explore_content">
                         <div class="col-md-6">
-                            <img style="width:85%" src="../img/learning-objects.png" alt="learningobjects" title="Learning Objects" class="explre_image">
+                            <img style="width:85%" src="<%=contextPath%>/img/learning-objects.png" alt="learningobjects" title="Learning Objects" class="explre_image">
                         </div>
                         <div class="col-md-6">
                             <div>
