--- a/platform-ui/views/web/aboutus.ejs
+++ b/platform-ui/views/web/aboutus.ejs
@@ -38,7 +38,7 @@
                     <div class="row container il_explore_content">
                         <div class="col-md-12">
                             <p align="center">
-                                <img src="../img/90210_1.png" alt="knowledge to competency" title="knowledge to competency" style="width:851px;height:315px;">
+                                <img src="<%=contextPath%>/img/90210_1.png" alt="knowledge to competency" title="knowledge to competency" style="width:851px;height:315px;">
                             </p>
                             <p class="explr-content">About Ilimi / What do we do?</p>
                             <p class="explr-content">Ilimi combines leading edge developments in fields such as semantic computing, predictive analytics, learning science and information technology to deliver path breaking learning solutions to enterprises, training businesses and academic institutions.</p>
