--- a/platform-ui/views/web/homepage.ejs
+++ b/platform-ui/views/web/homepage.ejs
@@ -34,7 +34,7 @@
 
                             </div>
                             <div class="image-cont">
-                                <img src="/img/webimages/slider2.png" alt="...">
+                                <img src="<%=contextPath%>/img/webimages/slider2.png" alt="...">
                             </div>
                         </div>
                     </div>
