--- a/platform-ui/views/web/howitworks.ejs
+++ b/platform-ui/views/web/howitworks.ejs
@@ -42,7 +42,7 @@
               <div class="il-web-padng">
                   <div class="row container il_explore_content">
                       <div class="col-md-6">
-                        <img src="../img/explore-img.png" alt="Explore" title="Explore" class="explre_image">
+                        <img src="<%=contextPath%>/img/explore-img.png" alt="Explore" title="Explore" class="explre_image">
                       </div>
                       <div class="col-md-6">
                         <div>
@@ -64,7 +64,7 @@
                           <p class="explr-content">Corporate education increasingly demands practitioners to share their expertise as opposed to courses focused on theory alone. However practitioner do not have time to teach every student or to create complete courses. Ilimi, with its semantic APIs makes it easy for practitioners to share their expertise. Practitioners focus on recording their course videos, the Ilimi engines automatically enhance these videos with exercises and supplemental content to make them complete from any learner's perspective. </p>
                       </div>
                       <div class="col-md-6">
-                          <img src="/img/top_faculty.png" class="il_image" alt="Top Faculty" title="Top Faculty">
+                          <img src="<%=contextPath%>/img/top_faculty.png" class="il_image" alt="Top Faculty" title="Top Faculty">
                       </div>
                   </div>
               </div>
@@ -72,7 +72,7 @@
               <div class="il-web-padng">
                   <div class="row container il_explore_content">
                       <div class="col-md-6">
-                          <img src="/img/tutoring.png" class="tutor_image" alt="Tutoring" title="Tutoring">
+                          <img src="<%=contextPath%>/img/tutoring.png" class="tutor_image" alt="Tutoring" title="Tutoring">
                       </div>
                       <div class="col-md-6">
                           <div>
@@ -94,7 +94,7 @@
                           <p class="explr-content">We believe that competency is best demonstrated by showcasing work done rather than by a certificate or scores. We recommend that courses are designed around projects that are relevant and cutting edge. Completing the project is ample evidence that the learners have achieved the required competency level. For IT courses, Ilimi has a full-fledged online programming environment where projects can be developed.</p>
                       </div>
                       <div class="col-md-6">
-                          <img src="/img/showcase.png" class="show_image" alt="Showcase" title="Showcase">
+                          <img src="<%=contextPath%>/img/showcase.png" class="show_image" alt="Showcase" title="Showcase">
                       </div>
                   </div>
               </div>
@@ -102,7 +102,7 @@
               <div class="il-web-padng">
                   <div class="row container il_explore_content">
                       <div class="col-md-6">
-                          <img src="/img/personaliztn.png" class="persnl_image" alt="Personalization" title="Personalization">
+                          <img src="<%=contextPath%>/img/personaliztn.png" class="persnl_image" alt="Personalization" title="Personalization">
                       </div>
                       <div class="col-md-6">
                           <div>
