--- a/platform-ui/views/web/ilimi-platform.ejs
+++ b/platform-ui/views/web/ilimi-platform.ejs
@@ -32,21 +32,21 @@
                                 <h1 class="bannerTitle">Competency means the ability to do. Period.</h1>
                                 <p class="banDescription"> Ilimi combines path breaking innovations like real time learner analytics, precision targeted coaching support, learning augmentation through personalized supplemental content and integrated project environment for hands on skill building.</p>
                             </div>
-                            <img class="banner-img" src="/img/banners/banner_1.png" alt="..." style="position:relative;">
+                            <img class="banner-img" src="<%=contextPath%>/img/banners/banner_1.png" alt="..." style="position:relative;">
                         </div>
                         <div class="item">
                             <div class="carousel-caption" style="position:absolute; left: 6%;">
                                 <h1 class="bannerTitle">Individual attention and coaching at enterprise scale</h1>
                                 <p class="banDescription">Ilimi's tutoring engine uses predictive analysis to determine at-risk learners and recommend content, activities and online tutoring sessions that precisely addresses these needs.</p>
                             </div>
-                            <img class="banner-img" src="/img/banners/banner_2.png" alt="..." style="position:relative;">
+                            <img class="banner-img" src="<%=contextPath%>/img/banners/banner_2.png" alt="..." style="position:relative;">
                         </div>
                         <div class="item">
                             <div class="carousel-caption" style="position:absolute; left: 6%;">
                                 <h1 class="bannerTitle">Automatically enrich existing content</h1>
                                 <p class="banDescription">Ilimi automatically adds additional content and exercises to existing learning content. With a repository of over a million learning objects to draw from personalization for individual learner needs is a given. </p>
                             </div>
-                            <img class="banner-img" src="/img/banners/banner_3.png" alt="..." style="position:relative;">
+                            <img class="banner-img" src="<%=contextPath%>/img/banners/banner_3.png" alt="..." style="position:relative;">
                         </div>
                     </div>
                     <a class="left carousel-control" href="#carousel-block" data-slide="prev">
@@ -71,7 +71,7 @@
                     </div>
                     <div class="feature-heading clearfix">
                         <div class="col-md-9">
-                            <img src="/img/shifted-curve.png" alt="Outcome achievement" title="Outcome Achievement" height="400px" width="750px">
+                            <img src="<%=contextPath%>/img/shifted-curve.png" alt="Outcome achievement" title="Outcome Achievement" height="400px" width="750px">
                         </div>
                         <div class="col-md-3">
                             <h2 class="explore">Unmatched Outcome Achievement</h2>
@@ -96,7 +96,7 @@
                 <h2 style="color:#000;"> Individual Attention at any scale </h2>
             </div>
             <div>
-                <img src="/img/tutoring1.png" alt="tutoring" title="Tutoring" width="100%">
+                <img src="<%=contextPath%>/img/tutoring1.png" alt="tutoring" title="Tutoring" width="100%">
                 <div class="container">
                     <div class="margin30 feature-heading clearfix">
                         <p class="feature-content text-justify">
@@ -169,7 +169,7 @@
                 <h2 style="color:#000;"> A Million Learning Objects </h2>
             </div>
             <div>
-                <img src="/img/library1.jpg" alt="tutoring" title="objects" width="100%">
+                <img src="<%=contextPath%>/img/library1.jpg" alt="tutoring" title="objects" width="100%">
                 <div class="container">
                     <div class="margin30 feature-heading clearfix">
                         <p class="feature-content text-justify">
