--- a/platform-ui/public/templates/player/game.html
+++ b/platform-ui/public/templates/player/game.html
@@ -23,7 +23,7 @@
             <div class="col-md-12 noPad padTop marginBottom15 borderBottomSolid gameTitleSection">
             	<div class="col-md-3 noPad">
             		<img ng-src="{{selectedConcept.metadata.posterImage}}" ng-if="selectedConcept.metadata.posterImage"/>
-            		<img src="/img/not_available.jpg" ng-if="!selectedConcept.metadata.posterImage"/>
+            		<img ng-src="{{contextPath}}/img/not_available.jpg" ng-if="!selectedConcept.metadata.posterImage"/>
                 <div class="col-md-12 noPad marginTop10 marginBottom15">
                     <span class="badge greenBadge marginRight15" ng-if="selectedConcept.metadata.purpose">{{selectedConcept.metadata.purpose}}</span>
                     <span class="badge greenBadge marginRight15" ng-if="selectedConcept.metadata.status">{{selectedConcept.metadata.status}}</span>
@@ -70,11 +70,11 @@
                 <li ng-repeat="screenshot in selectedConcept.screenshots">
   						    <a href="javascript:void(0)" data-toggle="modal" data-target=".image-view-modal" ng-if="screenshot.mediaType == 'image'" ng-click="viewScreenShot(screenshot)">
                     <img ng-src="{{screenshot.mediaUrl}}" class="carouselImg" ng-if="screenshot.mediaUrl"/>
-                    <img src="/img/not_available.jpg" class="carouselImg" ng-if="!screenshot.mediaUrl"/>
+                    <img ng-src="{{contextPath}}/img/not_available.jpg" class="carouselImg" ng-if="!screenshot.mediaUrl"/>
   						    </a>
   						    <a href="javascript:void(0)" data-toggle="modal" data-target=".image-view-modal" ng-if="screenshot.mediaType == 'video'" ng-click="viewScreenShot(screenshot)">
   							   <img ng-src="{{screenshot.posterImage}}" class="carouselImg" ng-if="screenshot.posterImage"/>
-  							   <img src="/img/not_available.jpg" class="carouselImg" ng-if="!screenshot.posterImage"/>
+  							   <img ng-src="{{contextPath}}/img/not_available.jpg" class="carouselImg" ng-if="!screenshot.posterImage"/>
   							   <div id="playImg">
   								    <i class="fa fa-play"></i>
   							   </div>
@@ -91,7 +91,7 @@
 				    		<div class="pad20">
 				    			<div ng-if="selectedScreenshot.mediaType == 'image'">
 				    				<img ng-src="{{selectedScreenshot.mediaUrl}}" class="screenshotImg" ng-if="selectedScreenshot.mediaUrl"/>
-				    				<img src="/img/not_available.jpg" ng-if="!selectedScreenshot.mediaUrl"/>
+				    				<img ng-src="{{contextPath}}/img/not_available.jpg" ng-if="!selectedScreenshot.mediaUrl"/>
 				    			</div>
 				    			<div ng-if="selectedScreenshot.mediaType == 'video'">
 				    				<iframe id="selectedScreenshotIframe" width="800" height="450" frameborder="0" allowfullscreen></iframe>
