--- a/platform-ui/public/templates/player/gameList.html
+++ b/platform-ui/public/templates/player/gameList.html
@@ -53,7 +53,7 @@
             		<div ng-if="games.length > 0" class="tile gameTile" ng-repeat="game in games" ng-click="viewGame(game.identifier)" style="border: 1px solid #eee;box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
 	    				<div class="tile-content image" style="padding: 15px;">
 	        				<img ng-src="{{game.metadata.appIcon}}" ng-if="game.metadata.appIcon">
-	        				<img src="/img/not_available.jpg" ng-if="!game.metadata.appIcon">
+	        				<img ng-src="{{contextPath}}/img/not_available.jpg" ng-if="!game.metadata.appIcon">
 	    				</div>
 	    				<div class="brand bg-white">
         					<span class="label fg-black" style="text-align: left;">
