--- a/platform-ui/views/includes/common-styles.ejs
+++ b/platform-ui/views/includes/common-styles.ejs
@@ -1,7 +1,7 @@
 <script type="text/javascript" src="https://fast.fonts.net/jsapi/6bb78b32-9b12-4a14-9179-8de98470e4b1.js"></script>
-<link rel="stylesheet" href="/css/thirdparty/bootstrap.min.css" type="text/css"/>
-<link rel="stylesheet" href="/css/app/common.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/font-awesome.min.css" type="text/css"/>
-<link rel="stylesheet" href="/css/app/web.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/font-style.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/bootstrap-social.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/bootstrap.min.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/app/common.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/font-awesome.min.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/app/web.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/font-style.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/bootstrap-social.css" type="text/css"/>
