--- a/platform-ui/views/includes/player-styles.ejs
+++ b/platform-ui/views/includes/player-styles.ejs
@@ -1,23 +1,23 @@
 <script type="text/javascript" src="https://fast.fonts.net/jsapi/6bb78b32-9b12-4a14-9179-8de98470e4b1.js"></script>
-<link rel="stylesheet" href="/css/thirdparty/bootstrap.min.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/font-awesome.min.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/font-style.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/bootstrap-social.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/jquery-ui.min.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/bootstrap3-wysihtml5-editor.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/bootstrap.min.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/font-awesome.min.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/font-style.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/bootstrap-social.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/jquery-ui.min.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/bootstrap3-wysihtml5-editor.css" type="text/css"/>
 
-<link rel="stylesheet" href="/css/thirdparty/bootstrap-wysihtml5.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/select2.css" type="text/css"/>
-<link rel="stylesheet" href="/css/app/common.css" type="text/css"/>
-<link rel="stylesheet" href="/css/app/app.css" type="text/css">
-<link rel="stylesheet" href="/css/app/custom.css" type="text/css"/>
-<link rel="stylesheet" href="/css/app/ilimi.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/font-style.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/bootstrap-wysihtml5.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/select2.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/app/common.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/app/app.css" type="text/css">
+<link rel="stylesheet" href="<%=contextPath%>/css/app/custom.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/app/ilimi.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/font-style.css" type="text/css"/>
 
-<link rel="stylesheet" href="/css/thirdparty/iconFont.min.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/metro-bootstrap-responsive.min.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/metro-bootstrap.min.css" type="text/css"/>
-<link rel="stylesheet" href="/css/thirdparty/jquery.bxslider.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/iconFont.min.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/metro-bootstrap-responsive.min.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/metro-bootstrap.min.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/jquery.bxslider.css" type="text/css"/>
 
 <style>
     .word.w0 {
