--- a/platform-ui/views/includes/web-scripts.ejs
+++ b/platform-ui/views/includes/web-scripts.ejs
@@ -1,11 +1,11 @@
-<script src="/js/thirdparty/underscore.js"></script>
-<script src="/js/thirdparty/angular-d3-min.js"></script>
-<script src="/js/thirdparty/d3.min.js"></script>
-<script src="/js/app/controllers/homePageController.js"></script>
-<script src="/js/app/controllers/loginController.js"></script>
-<script src="/js/thirdparty/sunburst-services.js"></script>
-<script src="/js/thirdparty/sunburst-directives.js"></script>
-<script src="/js/thirdparty/sunburst-min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/underscore.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/angular-d3-min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/d3.min.js"></script>
+<script src="<%=contextPath%>/js/app/controllers/homePageController.js"></script>
+<script src="<%=contextPath%>/js/app/controllers/loginController.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/sunburst-services.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/sunburst-directives.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/sunburst-min.js"></script>
 <script>
     var is_chrome = navigator.userAgent.toLowerCase().indexOf('chrome') > -1;
     if(is_chrome)
